--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-express": "^3.5.0",
+    "graphql": "^15.7.2",
     "mssql": "^7.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
